--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://tr.linkedin.com/in/ahmet-can-mert-a1416955"
+  linkedin         : "ahmet-can-mert-a1416955"
   orcid            : "http://orcid.org/0000-0002-7400-2450"
   pinterest        :
   soundcloud       :
