--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Ahmet Can Mert"
   avatar           : "acm.png"
-  bio              : "PhD candidate at Sabanci University"
-  location         : "Istanbul, Turkey"
+  bio              : "Postdoctoral Researcher at TU Graz"
+  location         : "Graz, Austria"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com.tr/citations?user=AjOpJZUAAAAJ&hl=en"
