--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Gulizar Gunay"
-  avatar           : "photo.png"
+  avatar           : "gulizar.png"
   bio              : "Postdoctoral Researcher at Sabanci University, Turkey"
   location         : "Istanbul, Turkey"
   employer         :
