--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Gulizar Gunay"
   avatar           : "gulizar.png"
-  bio              : "Postdoctoral Researcher at Sabanci University, Turkey"
-  location         : "Istanbul, Turkey"
+  bio              : "Ph.D. in Mathematics"
+  location         : "Graz, Austria"
   employer         :
   pubmed           :
   googlescholar    : 
